# FiniteAutomates

./: CMakeLists.txt  README.md  compile.sh  main.cpp  run.sh  test.json  test3.json
DFA/: DFA.cpp  DFA.h
NFA/: NFA.cpp  NFA.h
RE/: RE.cpp  RE.h
TFA/: TFA.cpp  TFA.h
eNFA/: eNFA.cpp  eNFA.h
